<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_secondary">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_expense"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:layout_below="@+id/txtTitle"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Enter Expense Amount"
        android:background="@color/material_dynamic_neutral70"
        android:ems="10"
        android:hint="@string/enter_the_amount"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="225dp"
        android:layout_height="57dp"
        android:layout_below="@+id/edtAmount"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        android:background="#ffffff"
        android:outlineAmbientShadowColor="#E66666"
        android:outlineSpotShadowColor="#FFFFFF" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtAmount"
        android:layout_marginStart="250dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add" />

</RelativeLayout>